--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
   },
   "homepage": "https://github.com/healthree/health-buddy#readme",
   "dependencies": {
-    "inquirer": "^8.2.4"
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.4",
+    "dotenv": "^16.0.1",
+    "express-session": "^1.17.3",
+    "init": "^0.1.2",
+    "inquirer": "^8.2.4",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.20.1"
   }
 }
