--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A full stack application for a hospital set up, that can be used both by walk in patients and staff at the hospital",
   "main": "server.js",
   "scripts": {
+    "seeds": "node seeds",
     "test": "jest",
     "start": "node server.js",
     "develop": "nodemon server.js"
@@ -22,14 +23,9 @@
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.4",
     "dotenv": "^16.0.1",
-<<<<<<< HEAD
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
-=======
-    "express-session": "^1.17.3",
-    "init": "^0.1.2",
->>>>>>> api_by_luyan
     "inquirer": "^8.2.4",
     "mysql2": "^2.3.3",
     "sequelize": "^6.20.1"
